@@ -22,7 +22,7 @@
       <licence tarname="binutils-%-mingw32-doc.tar" />
 
       <component class="bin">
-        <release tarname="binutils-2.21-1-mingw32-bin.tar.lzma" />
+        <release tarname="binutils-2.21-2-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.51-1-mingw32-bin.tar.lzma" />
         <release tarname="binutils-2.20.1-2-mingw32-bin.tar.gz" />
         <release tarname="binutils-2.20-1-mingw32-bin.tar.gz" />
@@ -30,11 +30,11 @@
       </component>
 
       <component class="doc">
-        <release tarname="binutils-2.21-1-mingw32-doc.tar.lzma" />
+        <release tarname="binutils-2.21-2-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lang">
-        <release tarname="binutils-2.21-1-mingw32-lang.tar.lzma" />
+        <release tarname="binutils-2.21-2-mingw32-lang.tar.lzma" />
       </component>
       </release>
     </package>
